# Karolina_EHR

./: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  USAGE_GUIDE.md  demo.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_system.py
karolina_ehr/: __init__.py
karolina_ehr/data/: .gitignore
karolina_ehr/locales/de/: messages.json
karolina_ehr/locales/en/: messages.json
karolina_ehr/locales/sv/: messages.json
karolina_ehr/models/: __init__.py
karolina_ehr/services/: __init__.py  localization.py  security.py  terminology.py
karolina_ehr/ui/: __init__.py  terminal.py
src/karolina_ehr/: __init__.py  main.py
tests/: __init__.py  test_basic.py
